# squirreldisk

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  d3chart.ts  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs  scan.rs  window_style.rs
src/components/: DiskDetail.tsx  DiskList.tsx  FileLine.tsx  LanguageSelector.tsx  ParentFolder.tsx  TitleBar.tsx
src/i18n/: index.ts
src/i18n/locales/: al.json  ar.json  bi.json  bul.json  ch-sim.json  ch-tr.json  chec.json  core.json  croat.json  dan.json  en.json  es.json  eslov.json  fin.json  fr.json  gri.json  hindi.json  hol.json  island.json  it.json  jp.json  mon.json  nor.json  per.json  pol.json  pt.json  ru.json  ruma.json  suec.json  tail.json  turc.json  viet.json
src/workers/: timerWorker.ts
