[package]
name = "SQDisk-tauri"
version = "1.0.0"
description = "A Tauri App to view your´s disk space"
authors = ["KnightRlex"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
sysinfo = "0.27.7"

# ACTUALIZADAS PARA TAURI 2:
window-vibrancy = "0.5"
raw-window-handle = "0.6"

walkdir = "2"

regex = "1"

[target."cfg(target_os = \"windows\")".dependencies]
# ACTUALIZADA PARA SOPORTAR DWMWCP_ROUND (Windows 11):
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_UI_Controls"
] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26" # Actualizada ligeramente para estabilidad con 0.6
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
